--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<img src="Group 7.png" />
+html {
+   min-height: 100%;
+   background-image: url(image.jpg);
+   background-size: cover;
+   background-repeat: no-repeat;
+   background-position: center center;
+}
