--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 html {
    min-height: 100%;
-   background-image: Group 7.jpg;
+   background-image: Group 7.png;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
