--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-html {
-   min-height: 100%;
-   background-image: Group 7.png;
-   background-size: cover;
-   background-repeat: no-repeat;
-   background-position: center center;
-}
+<img src="Group 7.png" alt="nanocar">
